# internal/controllers/http/responses/schema/lookup.go
@@ -1,0 +1,6 @@
+package schema
+
+// LookupResponse -
+type LookupResponse struct {
+	ActionNames []string `json:"action_names"`
+}
