# internal/controllers/http/v1/schema.go
@@ -12,32 +12,35 @@ import (
 
 	"github.com/labstack/echo/v4"
 
+	"github.com/Permify/permify/internal/commands"
 	req "github.com/Permify/permify/internal/controllers/http/requests/schema"
 	"github.com/Permify/permify/internal/controllers/http/responses"
 	res "github.com/Permify/permify/internal/controllers/http/responses/schema"
 	"github.com/Permify/permify/internal/entities"
 	"github.com/Permify/permify/internal/managers"
+	"github.com/Permify/permify/internal/services"
 	"github.com/Permify/permify/pkg/dsl/ast"
 	"github.com/Permify/permify/pkg/dsl/parser"
 	"github.com/Permify/permify/pkg/dsl/schema"
 	"github.com/Permify/permify/pkg/logger"
-	"github.com/Permify/permify/pkg/tuple"
 )
 
 type schemaRoutes struct {
 	schemaManager managers.IEntityConfigManager
+	schemaService services.ISchemaService
 	l             logger.Interface
 }
 
 // newSchemaRoutes -
-func newSchemaRoutes(handler *echo.Group, m managers.IEntityConfigManager, l logger.Interface) {
-	r := &schemaRoutes{m, l}
+func newSchemaRoutes(handler *echo.Group, ss services.ISchemaService, m managers.IEntityConfigManager, l logger.Interface) {
+	r := &schemaRoutes{m, ss, l}
 
 	h := handler.Group("/schemas")
 	{
 		h.POST("/write", r.write)
 		h.GET("/read/:schema_version", r.read)
 		h.GET("/read", r.read)
+		h.POST("/lookup", r.lookup)
 	}
 }
 
@@ -83,32 +86,25 @@ func (r *schemaRoutes) write(c echo.Context) (err error) {
 
 	pr := parser.NewParser(string(buf.Bytes()))
 	sch := pr.Parse()
-
 	if pr.Error() != nil {
 		return c.JSON(http.StatusUnprocessableEntity, responses.ValidationResponse(map[string]string{
 			"schema": pr.Error().Error(),
 		}))
 	}
 
-	var isValid bool
-	var cnf []entities.EntityConfig
-
-	for _, st := range sch.Statements {
-		name := st.(*ast.EntityStatement).Name.Literal
-		if name == tuple.USER {
-			isValid = true
-		}
-
-		cnf = append(cnf, entities.EntityConfig{
-			Entity:           name,
-			SerializedConfig: []byte(st.String()),
-		})
-	}
-
-	if !isValid {
+	err = sch.Validate()
+	if err != nil {
 		return c.JSON(http.StatusUnprocessableEntity, responses.ValidationResponse(map[string]string{
 			"schema": "must have user entity",
 		}))
+	}
+
+	var cnf []entities.EntityConfig
+	for _, st := range sch.Statements {
+		cnf = append(cnf, entities.EntityConfig{
+			Entity:           st.(*ast.EntityStatement).Name.Literal,
+			SerializedConfig: []byte(st.String()),
+		})
 	}
 
 	var version string
@@ -131,7 +127,7 @@ func (r *schemaRoutes) write(c echo.Context) (err error) {
 // @Produce     json
 // @Param       request body schema.ReadRequest true "''"
 // @Success     200 {object} responses.Message
-// @Failure     400 {object} []schema.Entity
+// @Failure     400 {object} responses.HTTPErrorResponse
 // @Router      /schemas/read/:schema_version [get]
 func (r *schemaRoutes) read(c echo.Context) (err error) {
 	ctx, span := tracer.Start(c.Request().Context(), "schemas.read")
@@ -153,4 +149,40 @@ func (r *schemaRoutes) read(c echo.Context) (err error) {
 	}
 
 	return c.JSON(http.StatusOK, responses.SuccessResponse(response.Entities))
+}
+
+// @Summary     Schema
+// @Description lookup your authorization model
+// @ID          schemas.lookup
+// @Tags  	    Schema
+// @Accept      json
+// @Produce     json
+// @Param       request body schema.LookupRequest true "''"
+// @Success     200 {object} schema.LookupResponse
+// @Failure     400 {object} responses.HTTPErrorResponse
+// @Router      /schemas/lookup [post]
+func (r *schemaRoutes) lookup(c echo.Context) (err error) {
+	ctx, span := tracer.Start(c.Request().Context(), "schemas.lookup")
+	defer span.End()
+
+	request := new(req.LookupRequest)
+	if err = (&echo.DefaultBinder{}).BindBody(c, &request.Body); err != nil {
+		return err
+	}
+	v := request.Validate()
+	if v != nil {
+		return c.JSON(http.StatusUnprocessableEntity, responses.ValidationResponse(v))
+	}
+
+	var response commands.SchemaLookupResponse
+	response, err = r.schemaService.Lookup(ctx, request.Body.EntityType, request.Body.RelationNames, request.Body.SchemaVersion.String())
+
+	if err != nil {
+		span.SetStatus(codes.Error, echo.ErrInternalServerError.Error())
+		return echo.ErrInternalServerError
+	}
+
+	return c.JSON(http.StatusOK, responses.SuccessResponse(res.LookupResponse{
+		ActionNames: response.ActionNames,
+	}))
 }
